Test Fix NewBills

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   </style>  
   <body>
     <div id="root"></div>
+    <p class="🌭"></p>
     <!-- Datepicker.js -->
     <script src="src/app/datepicker.js">
     </script>
